force-app/main/default/objects/OrderShipping__c/OrderShipping__c.object-meta.xml
<CustomObject>
    <description>One order can be sent in several times</description>
    <label>Order Shipping</label>
    <nameField>
        <label>Shipping Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders Shippings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>