force-app/main/default/objects/OrderShipping__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>deprioritize</fullName>
                <label>Serve in last</label>
            </value>
            <value>
                <fullName>process_atp</fullName>
                <label>re-attempt allocation</label>
            </value>
            <value>
                <fullName>prioritize</fullName>
                <label>Serve in priority</label>
            </value>
            <value>
                <fullName>unprioritize</fullName>
                <label>Undo Serve in priority</label>
            </value>
            <value>
                <fullName>cancel</fullName>
                <label>Cancel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>