force-app/main/default/objects/OrderShipping__c/fields/DeliveryType__c.field-meta.xml
<CustomField>
    <fullName>DeliveryType__c</fullName>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>standard</fullName>
                <label>Standard</label>
            </value>
            <value>
                <fullName>express</fullName>
                <label>Express</label>
            </value>
            <value>
                <fullName>overnight</fullName>
                <label>Overnight</label>
            </value>
            <value>
                <fullName>premium</fullName>
                <label>Premium</label>
            </value>
            <value>
                <fullName>clickandcollect</fullName>
                <label>Click &amp; Collect</label>
            </value>
            <value>
                <fullName>shipforpickup</fullName>
                <label>Click and Collect</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>