force-app/main/default/objects/OrderShipping__c/fields/IsSubmittedUser__c.field-meta.xml
<CustomField>
    <fullName>IsSubmittedUser__c</fullName>
    <formula>SubmitedBy__c == $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Submitted User</label>
    <type>Checkbox</type>
</CustomField>