force-app/main/default/objects/OrderShipping__c/fields/IsXstoreOrder__c.field-meta.xml
<CustomField>
    <fullName>IsXstoreOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsXstoreOrder</label>
    <type>Checkbox</type>
</CustomField>