force-app/main/default/objects/OrderShipping__c/fields/Pickup_Location__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Location__c</fullName>
    <description>The RMS ID of the pickup location</description>
    <label>Pickup Location</label>
    <length>8</length>
    <type>Text</type>
</CustomField>