force-app/main/default/objects/OrderShipping__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Action__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>VIC/10K</fullName>
            </value>
            <value>
                <fullName>High Escalated complaint</fullName>
            </value>
            <value>
                <fullName>Technical issue</fullName>
            </value>
            <value>
                <fullName>Defective item</fullName>
            </value>
            <value>
                <fullName>Lost Parcel</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Client Cancelled</fullName>
            </value>
            <value>
                <fullName>Stock issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>