force-app/main/default/objects/OrderShipping__c/fields/ShippingNumber__c.field-meta.xml
<CustomField>
    <fullName>ShippingNumber__c</fullName>
    <description>KBRW=request id
ATG=shipping group</description>
    <externalId>true</externalId>
    <label>Shipping Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>