force-app/main/default/objects/OrderShipping__c/fields/Source_Location__c.field-meta.xml
<CustomField>
    <fullName>Source_Location__c</fullName>
    <description>The RMS ID of the source location</description>
    <label>Source Location</label>
    <length>8</length>
    <type>Text</type>
</CustomField>