force-app/main/default/objects/OrderShipping__c/fields/StatusDate__c.field-meta.xml
<CustomField>
    <fullName>StatusDate__c</fullName>
    <description>Last modification date of the status</description>
    <label>Status Date</label>
    <type>DateTime</type>
</CustomField>