force-app/main/default/objects/OrderShipping__c/fields/statusIconics__c.field-meta.xml
<CustomField>
    <fullName>statusIconics__c</fullName>
    <description>This field is calculated thanks to the custom medatatype &quot;Shipping Group Statuses&quot;</description>
    <label>statusIconics</label>
    <length>50</length>
    <type>Text</type>
</CustomField>