force-app/main/default/objects/OrderShipping__c/fields/SubmitedBy__c.field-meta.xml
<CustomField>
    <fullName>SubmitedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SubmitedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders_Shippings</relationshipName>
    <type>Lookup</type>
</CustomField>