force-app/main/default/objects/OrderShipping__c/fields/SubmitedDate__c.field-meta.xml
<CustomField>
    <fullName>SubmitedDate__c</fullName>
    <label>Submited Date</label>
    <type>DateTime</type>
</CustomField>