force-app/main/default/objects/OrderShipping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Order__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>SubmitedBy__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>ShippingNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>