force-app/main/default/objects/OrderShipping__c/listViews/My_Submitted_Order.listView-meta.xml
<ListView>
    <fullName>My_Submitted_Order</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Action__c</columns>
    <columns>Reason__c</columns>
    <columns>SubmitedBy__c</columns>
    <columns>SubmitedDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsSubmittedUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Submitted Order</label>
</ListView>